# Spin-cplusplus

./: .gitignore  CMakeLists.txt  README.md  for_example.pml  mesg.cpp  msc_tcl.cpp  pan.c  pan.p  pan.pre  reprosrc.cpp  spin.hpp  spin.y  spinlex.cpp  structs.cpp  sym.cpp  vars.cpp
docs/html/: access_8hpp_source.html  annotated.html  arguments__parser_8hpp_source.html  class_arguments_parser-members.html  class_arguments_parser.html  class_main_processor-members.html  class_main_processor.html  class_pan_processor-members.html  class_pan_processor.html  class_pre_proc_settings-members.html  class_pre_proc_settings.html  classes.html  classfile_1_1_file_stream-members.html  classfile_1_1_file_stream.html  classfile_1_1_line_number-members.html  classfile_1_1_line_number.html  classformat_1_1_preprocessed_file_viewer-members.html  classformat_1_1_preprocessed_file_viewer.html  classformat_1_1_pretty_print_viewer-members.html  classformat_1_1_pretty_print_viewer.html  classhelpers_1_1_deferred-members.html  classhelpers_1_1_deferred.html  classlexer_1_1_inline_processor-members.html  classlexer_1_1_inline_processor.html  classlexer_1_1_lexer-members.html  classlexer_1_1_lexer.html  classlexer_1_1_scope_processor-members.html  classlexer_1_1_scope_processor.html  classutils_1_1seed_1_1_seed-members.html  classutils_1_1seed_1_1_seed.html  classutils_1_1verbose_1_1_flags-members.html  classutils_1_1verbose_1_1_flags.html  codegen_8hpp_source.html  deferred_8hpp_source.html  dir_013e9b114c219e0153e412b4c571ed4f.html  dir_04b055de3b41eef0280f365515a39d02.html  dir_097b5d8d2f5dfd4edc49f5ebe967ba1c.html  dir_0c26bd22f254302c4dfbaa95bf527e9d.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_5eb159725f84c66aafd839904a4acdd0.html  (+160 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_10.js  classes_11.js  classes_6.js  classes_7.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  searchdata.js
docs/latex/: access_8hpp_source.tex  annotated.tex  arguments__parser_8hpp_source.tex  class_arguments_parser.tex  class_main_processor.tex  class_pan_processor.tex  class_pre_proc_settings.tex  classfile_1_1_file_stream.tex  classfile_1_1_line_number.tex  classformat_1_1_preprocessed_file_viewer.tex  classformat_1_1_pretty_print_viewer.tex  classhelpers_1_1_deferred.tex  classlexer_1_1_inline_processor.tex  classlexer_1_1_lexer.tex  classlexer_1_1_scope_processor.tex  classutils_1_1seed_1_1_seed.tex  classutils_1_1verbose_1_1_flags.tex  codegen_8hpp_source.tex  deferred_8hpp_source.tex  dstep_8hpp_source.tex  element_8hpp_source.tex  fatal_8hpp_source.tex  file__stream_8hpp_source.tex  files.tex  flow_8hpp_source.tex  fms_8hpp_source.tex  guided_8hpp_source.tex  help_8hpp_source.tex  helpers_8hpp_source.tex  inline__processor_8hpp_source.tex  itype_8hpp_source.tex  label_8hpp_source.tex  launch__settings_8hpp_source.tex  lexer_8hpp_source.tex  lextok_8hpp_source.tex  line__number_8hpp_source.tex  main__processor_8hpp_source.tex  memory_8hpp_source.tex  mesg_8hpp_source.tex  models_2symbol_8hpp_source.tex  (+80 more)
doxygen/: Doxyfile.in
pangen/: pangen1.cpp  pangen2.hpp  pangen3.cpp  pangen4.cpp  pangen4.hpp  pangen5.cpp
src/: dstep.cpp  flow.cpp  guided.cpp  main.cpp  mesg.cpp  msc_tcl.cpp  old_main.cpp  reprosrc.cpp  run.cpp  sched.cpp  spin.hpp  spin.y  spin.yy  spinlex.cpp  structs.cpp  sym.cpp  vars.cpp
src/codegen/: codegen.cpp  codegen.hpp
src/dstep/: dstep.cpp  dstep.hpp
src/fatal/: fatal.cpp  fatal.hpp
src/helpers/: helpers.cpp  helpers.hpp
src/lexer/: deferred.cpp  deferred.hpp  file_stream.cpp  file_stream.hpp  helpers.cpp  helpers.hpp  inline_processor.cpp  inline_processor.hpp  lexer.cpp  lexer.hpp  line_number.cpp  line_number.hpp  names.cpp  names.hpp  scope.cpp  scope.hpp  yylex.cpp  yylex.hpp
src/lexer/models/: itype.hpp
src/main/: arguments_parser.cpp  arguments_parser.hpp  help.cpp  help.hpp  launch_settings.cpp  launch_settings.hpp  main_processor.cpp  main_processor.hpp  pan_processor.cpp  pan_processor.hpp  pre_proc_settings.cpp  pre_proc_settings.hpp
src/models/: access.hpp  element.hpp  fms.hpp  itype.hpp  label.hpp  lextok.cpp  lextok.hpp  models_fwd.hpp  mtypes.hpp  proc_list.hpp  qh.hpp  queue.hpp  run_list.hpp  sequence.cpp  sequence.hpp  slicer.hpp  symbol.cpp  symbol.hpp  utype.hpp
src/pangen/: pangen1.cpp  pangen1.hpp  pangen2.cpp  pangen2.hpp  pangen3.cpp  pangen3.hpp  pangen4.cpp  pangen4.hpp  pangen5.cpp  pangen5.hpp  pangen6.cpp  pangen6.hpp  pangen7.cpp  pangen7.hpp
src/run/: flow.cpp  flow.hpp  run.cpp  run.hpp  sched.cpp  sched.hpp
src/structs/: structs.cpp  structs.hpp
src/symbol/: symbol.cpp  symbol.hpp
src/tl/: tl.hpp  tl_buchi.cpp  tl_cache.cpp  tl_lex.cpp  tl_main.cpp  tl_mem.cpp  tl_parse.cpp  tl_processor.hpp  tl_rewrt.cpp  tl_trans.cpp
src/trail/: guided.cpp  guided.hpp  mesg.cpp  mesg.hpp
src/utils/: memory.cpp  memory.hpp  utils.cpp  utils.hpp
src/utils/format/: format.cpp  format.hpp  preprocessed_file_viewer.cpp  preprocessed_file_viewer.hpp  pretty_print_viewer.cpp  pretty_print_viewer.hpp
src/utils/seed/: seed.cpp  seed.hpp
src/utils/verbose/: verbose.cpp  verbose.hpp
src/variable/: variable.cpp  variable.hpp
src/version/: version.hpp  version.hpp.in
tests/: arguments_parser_tests.cpp  defferred_tests.cpp  line_number_tests.cpp  names_tests.cpp  pan_processor_tests.cpp  pre_proc_settings_tests.cpp  regression_tests.cpp  scope_tests.cpp
tests/cases/: test_case_2  test_excpected_1  test_excpected_2
tl/: tl_cache.cpp  tl_main.cpp  tl_mem.cpp  tl_parse.cpp
